--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<h2 class="milk_text">Featured Brands</h2>
 
 				<!--/////////// Featured Brands //////////-->
-				<section class="shadow left clearfix feature" id="spotlight">
+				<section class="shadow left clearfix feature col-row-1" id="spotlight">
 					<figure>
 						<img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
 						<figcaption>royalty free image from www.sxc.hu</figcaption>
@@ -90,7 +90,7 @@
 				<!--/////////// Ends Featured Brands //////////-->
 
 				<!--/////////// Archive List //////////-->
-				<section class="shadow right clearfix feature" id="archive">
+				<section class="shadow right clearfix feature col-row-1" id="archive">
 					<h2>Shoe Archive</h2>
 					<h3><a href="#">2014</a></h3>
 					<ul>
