--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<h2 class="milk_text">Featured Brands</h2>
 
 				<!--/////////// Featured Brands //////////-->
-				<div class="col-row-1"
+				<div class="col-row-1">
 				<section class="shadow left clearfix feature" id="spotlight">
 					<figure>
 						<img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
