--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 				<!--/////////// End Archive List //////////-->
 
 				<!--/////////// Deals //////////-->
+				<div class="col-row-2">
 				<section class="shadow feature left clearfix">
 					<figure>
 						<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
@@ -166,6 +167,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
+			</div>
 				<!--/////////// Ends Deals //////////-->
 
 			</div><!-- .wrapper -->
